test/compilable/imports/test15857b.d
module imports.test15857b;
void bar15857(int) {}
