test/fail_compilation/fail266.d
void b(int [] a) {
    b(a + a);
}

